# kerberos

./: libgssapi_krb5.so.2.2  libgssrpc.so.4.2  libk5crypto.so.3.1  libkadm5clnt_mit.so.11.0  libkadm5srv_mit.so.11.0  libkdb5.so.9.0  libkrad.so.0.0  libkrb5support.so.0.1  libverto.so.0.0  meson.build  meson_options.txt
src/: config.h
src/fakepam/.deps/: config.Po  data.Po  general.Po  kuserok.Po  logging.Po  script.Po
src/include/: Makefile  autoconf.h  autoconf.h.in  osconf.h
src/include/ss/: ss_err.h
src/portable/: krb5-profile.c  prof_int.h
